# speckitplus-book-rag-chatbot

./: .gitignore  docusaurus.config.js  index.md  package-lock.json  package.json  sidebars.js
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  add_sample_content.py  add_sample_content_with_precomputed_embeddings.py  agent.py  agent_logs.txt  api.py  clear_qdrant.py  create_qdrant_index.py  ingest_with_rate_limit.py  main.py  pyproject.toml  requirements.txt  retrieval_validation.py  retrieve.py  sitemap_ingestion.py  sitemap_parser.py  test_e2e.py  test_queries.txt  validation_report.md
backend/config/: __init__.py  settings.py
backend/src/: __init__.py  chunker.py  crawler.py  embedder.py  extractor.py  storage.py
backend/tests/: __init__.py  test_chunker.py  test_crawler.py  test_embedder.py  test_extractor.py  test_storage.py
backend/utils/: __init__.py  helpers.py  validators.py
backup/components/: ModuleTabs.js  NavigationItem.js
backup/context/: TabContext.js
backup/css/: custom.css
docs/capstone/: end-to-end.md  index.md
docs/conclusion/: index.md
docs/infrastructure/: index.md  setup.md
docs/intro/: index.md
docs/module-1-ros/: communication.md  concepts.md  index.md  python-ros.md  urdf.md
docs/module-2-digital-twin/: environments.md  human-robot-interaction.md  index.md  physics-simulation.md  sensor-simulation.md
docs/module-3-ai-brain/: index.md  navigation.md  nvidia-isaac.md  perception-pipelines.md  (+4 more)
frontend/: index.html  script.js  style.css
tests/: test_api.py  test_integration.py
(+138 files in other folders)
